--- a/index.css
+++ b/index.css
@@ -24,9 +24,14 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid lightgray;
-  padding: 10px;
+  padding: 10px 20px;
   padding-bottom: 10px;
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white; /* Ensure the background covers the content behind it */
 }
 
 .logo {
@@ -78,7 +83,9 @@ body {
   border: 2px solid #C026D3;
   padding: 5px 10px;
   border-radius: 5px;
+  color: white !important;
 }
+
 
 @media (max-width: 768px) {
   .nav-links {
@@ -93,23 +100,38 @@ body {
 }
 /* availle on ------------- */
 
-.availableOn {
+.secondSection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.taxProfessional {
+  width: 100px;
+}
+
+.availableOn1 > div:last-child{
+  gap: 30px;
+}
+.availableOn2 > div:last-child {
+  gap: 30px;
+}
+
+.availableOn1 > div > img:first-child {
+  width: 130px;
+}
+
+.availableOn2 > div > img{
+  width: 130px;
+}
+
+
+.secondSection {
   width: 90%;
   margin: auto;
-  margin-top: 10px;
+  margin-top: 100px;
 }
 
-.availableOn div {
-  font-size: 20px;
-}
-
-.availableOn img:nth-child(2) {
-  width: 160px;
-}
-
-.availableOn img:nth-child(3) {
-  width: 200px;
-}
 
 .trustedby {
   width: 35%;
@@ -120,6 +142,7 @@ body {
   font-size: 22px;
   padding: 10px;
   background: #d9d9d9;
+  
 }
 
 .mainSliderSection {
@@ -136,7 +159,7 @@ body {
 }
 
 .mainSliderSectionfirst {
-  width: 30%;
+  width: 40%;
   height: 300px;
   margin: auto;
   display: flex;
@@ -145,10 +168,11 @@ body {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    margin-top:150px;
 }
 
 .mainSliderSectionfirst > div:first-child {
-  width: 380px;
+  width: 500px;
   height: 300px;
 }
 
@@ -207,16 +231,14 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 80px;
+  margin-bottom: 40px;
 }
 
 .featuredCurrent p:first-child {
   font-size: 30px;
   font-weight: bold;
 }
-.featuredCurrent p:last-child {
-  color: #2563eb;
-  font-size: 18px;
-}
+
 
 /* first section crousel ------------ */
 
@@ -266,9 +288,10 @@ body {
 
 .carousel-container-featured {
   position: relative;
-  width: 100%;
+  width: 90%;
   display: flex;
   align-items: center;
+  margin: auto;
   margin-top: 20px;
 }
 
@@ -288,6 +311,14 @@ body {
   margin: 0 5px;
 }
 
+.crouselSidebar {
+  width: 5px;
+  height: 250px;
+  border-radius: 10px;
+  /* margin-right: 50px; */
+  background: #332395;
+}
+
 .nav-button-featured {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
@@ -305,12 +336,17 @@ body {
   margin-left: 10px;
 }
 
+.trustedOptionCreditcard p{
+  font-size: 16px;
+}
+
 /* hwo it's work---------------- */
 
 .mainHowItswork {
   width: 90%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .containerHow {
@@ -396,6 +432,15 @@ body {
   margin-left: 200px;
 }
 
+.designAffordableMiddle > div {
+  gap: 50px;
+  margin-bottom: 20px;
+}
+
+.designAffordableMiddle > div img {
+  width: 100px;
+}
+
 .designAffordableMiddle h1 {
   font-size: 30px;
   margin-bottom: 10px;
@@ -449,8 +494,8 @@ body {
 }
 
 .headings {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 80px;
+  margin-bottom: 80px;
   text-align: center;
   font-size: 40px;
   font-size: bold;
@@ -559,6 +604,8 @@ body {
   width: 100%;
   background-color: #DDD6FE;
   padding: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px
 }
 
 .onetimeProduct > div:first-child {
@@ -588,9 +635,10 @@ body {
 /* by single--------------- */
 
 .buySingle {
-  width: 90%;
+  width: 80%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px
 }
 
 .buySingle > div:last-child {
@@ -635,7 +683,8 @@ body {
 .dueDateexcel {
   width: 90%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .dueDateexcel > div:first-child {
@@ -673,8 +722,8 @@ body {
 .yourPoster {
   width: 90%;
   margin: auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .yourPoster > div:last-child {
@@ -724,12 +773,15 @@ body {
 
 /* no. one india ---- */
 
+.noOneIndiaMain {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
 .noOneIndia {
   width: 80%;
   margin: auto;
-  margin-top: 40px;
   color: white;
-  margin-bottom: 40px;
 }
 
 .noOneIndia > div:last-child {
@@ -773,7 +825,8 @@ body {
   margin: auto;
   margin-top: 40px;
   color: white;
-  margin-bottom: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .reliable div:last-child {
@@ -804,14 +857,14 @@ body {
 .oneclickbranding {
   width: 90%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 80px;
   color: #475569;
   gap: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 
 .oneclickbranding div:first-child img {
-  width: 100%;
+  width: 70%;
 }
 
 .oneclickbranding div:last-child {
@@ -832,6 +885,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .usePosters > div:first-child {
@@ -847,6 +902,10 @@ body {
 
 .usePosters > div:last-child {
   width: 50%;
+}
+
+.usePosters > div:first-child img{
+  width: 100%;
 }
 
 .usePosters > div:last-child > h1 {
@@ -958,6 +1017,10 @@ body {
   margin: auto;
   color: #ebf94f;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .popularProductsPopuler img {
@@ -967,7 +1030,7 @@ body {
 }
 
 .popularProductsDiscount {
-  width: 35%;
+  width: 50%;
   color: white;
   margin: auto;
   text-align: center;
@@ -988,7 +1051,8 @@ body {
 }
 
 .detailsbox {
-  width: 80%;
+  width: 85%;
+  /* gap: 0px; */
 }
 
 .detailsboxFirst {
@@ -997,11 +1061,13 @@ body {
   background-color: #e2f3ff;
   border-top: 5px solid #332395;
   padding: 20px 40px 20px 40px;
+  line-height: 30px;
 }
 
 .detailsboxSecond p:first-child {
   font-size: 20px;
   font-weight: 500;
+  line-height: 30px;
 }
 
 .detailsboxSecond p:last-child {
@@ -1029,7 +1095,7 @@ body {
 
 .detailsboxourAffordable {
   width: 100%;
-  /* gap: 70px; */
+  gap: 30px;
   /* padding: 50px; */
 }
 
@@ -1041,11 +1107,14 @@ body {
   border-top: 5px solid #332395;
   padding: 20px 40px 20px 40px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  line-height: 30px;
 }
+
 
 .detailsboxSecondourAffordable p:first-child {
   font-size: 20px;
   font-weight: 500;
+  margin-bottom: 10px;
 }
 
 .detailsboxSecondourAffordable p:last-child {
@@ -1059,7 +1128,8 @@ body {
   display: flex;
   justify-content: end;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .regulerAlert > div:first-child {
@@ -1091,19 +1161,33 @@ body {
 }
 
 .demoOfoneclick {
-  width: 80%;
+  width: 100%;
+  height:300px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 80px;
+  background: #332395;
 }
 
-.demoOfoneclick img {
-  width: 50%;
+.demoOfoneclick h1 {
+  margin-top: -200px;
+  color: white;
+  font-size: 40px;
+}
+
+.demoOfoneclickIframe {
+  width: 40%;
+  height: 300px;
   margin: auto;
   text-align: center;
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 10px;
+  margin-top: -200px;
 }
 
 /* reviewsection ----------- */
@@ -1166,6 +1250,7 @@ body {
   padding: 50px;
   display: flex;
   justify-content: space-between;
+  margin-top: 80px;
 }
 
 .mainFooter > div > div {
@@ -1214,13 +1299,13 @@ body {
 .youngCACommon {
   width: 50%;
   color: white;
-  padding: 20px 30px 0px 30px;
+  padding: 20px 10px 0px 20px;
   border-radius: 10px;
   font-size: 18px;
 }
 
 .youngCA h1 {
-  width: 30%;
+  width: 50%;
 }
 
 .youngCA > div:first-child {
@@ -1241,15 +1326,22 @@ body {
 .trustedOption {
   text-align: center;
   font-size: 25px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
   background-color: #e4eafd;
   padding: 40px;
+  /* gap: 30px; */
 }
 
+
 .trustedOption > div:last-child {
-  width: 80%;
+  width: 90%;
   margin: auto;
+  gap: 20px;
+}
+
+.trustedOption > div:last-child img {
+  width: 100px;
 }
 
 .trustedOption > div:first-child {
@@ -1262,7 +1354,8 @@ body {
 .ourFeaturesMain {
   width: 90%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .ourFeatures {
@@ -1338,6 +1431,8 @@ body {
 .faq {
   background: #f1f5f9;
   padding: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .headingsection {
@@ -1390,6 +1485,8 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 80px;
+  margin-bottom: 80px
 }
 
 .startup-content {
@@ -1444,6 +1541,8 @@ body {
   align-items: center;
   gap: 50px;
   padding: 40px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .benefitsOfbrandingh1 {
@@ -1466,9 +1565,15 @@ body {
 
 /* Responsive styles */
 @media (max-width: 768px) {
+
+  .secondSection {
+    display: block;
+    /* justify-content: space-between;
+    align-items: center; */
+  }
   /* affordable design ------------------ */
 
-  .designAffordable img {
+  .designAffordable > div:first-child img, .designAffordable > div:last-child img {
     display: none;
   }
 
@@ -1480,6 +1585,10 @@ body {
   .designAffordableMiddle {
     text-align: center;
     margin-left: 0;
+  }
+
+  .designAffordableMiddle > div {
+    display: block;
   }
 
   /* how it's works ----------- */
@@ -1509,12 +1618,19 @@ body {
 
   .trustedby {
     width: 90%;
+
+  }
+
+  .crouselSidebar {
+    display: none;
   }
 
   /* footerabove ---------------- */
 
   .footerAbove {
     padding: 20px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 
   .footerAbove > div {
@@ -1676,6 +1792,8 @@ body {
   .weOffer {
     width: 90%;
     margin: auto;
+    margin-top: 80px;
+    margin-bottom: 80px
   }
 
   .weOffer > div:first-child {
@@ -1741,6 +1859,7 @@ body {
   .dueDateexcel {
     display: block;
     margin: auto;
+
   }
 
   .dueDateexcel > div:first-child {
@@ -1829,11 +1948,22 @@ body {
     font-weight: 100;
   }
 
+  .demoOfoneclickIframe {
+    width: 80%;
+  }
+
+  .demoOfoneclick h1 {
+ 
+    font-size: 25px;
+  }
+  
+
   /* reliable ---------- */
 
   .reliable {
     display: block;
     padding: 40px;
+ 
   }
 
   .reliable div:first-child img {
@@ -1976,33 +2106,17 @@ body {
 
   /* avalibale on -------------- */
 
-  .availableOn {
-    width: 90%;
-    margin: auto;
-    margin-top: 10px;
-  }
-
-  .availableOn div {
-    font-size: 20px;
-  }
-
-  .availableOn img {
-    width: 50px;
-  }
-
-  .availableOn img:nth-child(2) {
-    width: 70px;
-  }
-
-  .availableOn img:nth-child(3) {
-    width: 70px;
-  }
-
+ 
   /* main slier section ------ */
 
   .mainSliderSectionfirst {
     box-shadow: #ffffff05 0px 1px 3px 0px,
       rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+  }
+
+  .mainSliderSectionfirst > div:first-child {
+    width: 380px;
+    height: 300px;
   }
 
   .mainSliderSection {
@@ -2080,12 +2194,6 @@ body {
     margin-top: 50px;
   }
 
-  .demoOfoneclick img {
-    width: 90%;
-    margin: auto;
-    text-align: center;
-    margin-top: 20px;
-  }
 
   .onetimeProduct > div:last-child {
     grid-template-columns: repeat(4,1fr);
@@ -2129,6 +2237,7 @@ body {
 
 .featuredCurrent {
   margin-top: 40px;
+
 }
 
 .featuredCurrent p:first-child {
@@ -2392,25 +2501,7 @@ body {
     width: 20%;
   }
 
-  .availableOn {
-    width: 90%;
-    display: block;
-    margin: auto;
-    text-align: center;
-    margin-top: 20px;
-  }
 
-  .availableOn img {
-    width: 50px;
-  }
-
-  .availableOn img:nth-child(2) {
-    width: 50px;
-  }
-
-  .availableOn img:nth-child(3) {
-    width: 50px;
-  }
 }
 
 /* Responsive Styles */
@@ -2523,7 +2614,7 @@ body {
   cursor: pointer;
   font-size: 14px;
   z-index: 1000;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 }
 
 .back-to-top:hover {
