--- a/index.css
+++ b/index.css
@@ -109,7 +109,6 @@ body {
 
 .availableOn1 {
   display: grid;
-  
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-content: center;
@@ -149,18 +148,19 @@ body {
 .secondSection {
   width: 95%;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .trustedby {
-  width: 45%;
+  width: 30%;
   margin: auto;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: -50px;
+  margin-top: 10px;
+  margin-bottom: -80px;
   font-weight: semibold;
   font-size: 22px;
-  padding: 10px;
+  padding: 5px;
+  border-radius: 5px;
   background: #d9d9d9;
 }
 
