--- a/index.css
+++ b/index.css
@@ -107,6 +107,8 @@ body {
   gap: 20px;
 }
 
+
+
 .availableOn1 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -790,6 +792,7 @@ body {
 /* no. one india ---- */
 
 .noOneIndiaMain {
+  margin: auto;
   margin-top: 80px;
   margin-bottom: 80px;
 }
@@ -1373,6 +1376,15 @@ body {
 .poweredBy img{
   width: 30%;
 }
+
+.poweredByFlex {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+
 
 /* trusted optin ------------------ */
 
@@ -2048,6 +2060,7 @@ body {
   }
 
   .noOneIndia {
+    width: 100%;
     display: block;
     margin: auto;
   }
@@ -2202,7 +2215,6 @@ body {
   .youngCACommon {
     width: 90%;
   }
-
   .youngCA h1 {
     width: 60%;
   }
@@ -2372,18 +2384,97 @@ body {
 }
 
 @media (max-width: 480px) {
+
+  .carousel-image-review {
+    min-width: 100%;
+  }
+
+#awardPresented {
+  width: 100%;
+}
+
+.poweredByFlex {
+  display: block;
+}
+
+.poweredByFlex img {
+  width: 90%;
+  margin-top: 20px;
+}
+
+  .flexBoxBetween img {
+    width: 60%;
+    margin: 10px 0;
+  }
+
+
+  .oneclickbranding {
+    width: 100%;
+    margin-bottom: 80px;
+    display: block;
+  }
+
+  .oneclickbranding div:last-child {
+    width: 90%;
+    margin-top: 20px;
+  }
+
+  .oneclickbranding div:first-child img {
+    width: 100%;
+  }
+
+  .iconflex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: auto;
+    margin-top: 10px;
+  }
+
+  .iconflex i {
+font-size: 22px;
+  }
+
   .poweredBy {
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
   .poweredBy div:last-child {
+    width: 10%;
     margin-top: 20px;
   }
-
-  .poweredBy img{
-    width: 50%;
+  
+  .poweredByimg{
+    width: 100%;
+    /* border: 1px solid; */
   }
+
+
+  .buySingle {
+    width: 90%;
+  }
+  .buySingle > div:last-child img {
+    width: 100%;
+    padding: 0px;
+  }
+
+  .weOffer > div:first-child img{
+    width: 100%;
+    margin: 0px;
+  }
+
+  .additionaltenpercent {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+
+  .youngCACommon {
+    padding:10px 5px;
+  }
+
 
   .mainSliderSectionfirst {
     margin-top: 20px;
@@ -2425,11 +2516,10 @@ body {
   .footerAbove > div > div > div:nth-child(2) {
     font-size: 50px;
   }
+
   /* young ca ------- */
 
-  .youngCACommon {
-    padding: 30px;
-  }
+  
 
   .youngCA h1 {
     width: 80%;
@@ -2592,10 +2682,6 @@ body {
     align-items: center;
   } */
 
-  .flexBoxBetween img {
-    width: 60%;
-    margin: 10px 0;
-  }
 
   /* faq --------------------- */
 
